# Proiect_retele_offline_messanger

./: CMakeLists.txt  LoginDialog.h  Test.pro  addtogroup.cpp  addtogroup.h  addtogroup.ui  client.cpp  compile.sh  creategroup.cpp  creategroup.h  creategroup.ui  interfata.cpp  interfata.h  interfata.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui  run.sh  server.cpp  usersgroups.cpp  usersgroups.h  usersgroups.ui
bd/: users.db
include/: biblioteci.h  const.h
include/comunic/: comunicare.h
include/functii/: baze_de_date.h  exit.h  grup.h  help.h  history.h  login.h  logout.h  notificariMesaje.h  offlinemessage.h  register.h  reply.h  send.h  users.h
src/: const.cpp
src/comunic/: comunicare.cpp
src/functii/: baze_de_date.cpp  exit.cpp  grup.cpp  help.cpp  history.cpp  login.cpp  logout.cpp  notificariMesaje.cpp  offlinemessage.cpp  register.cpp  reply.cpp  send.cpp  users.cpp
